--- a/table.html
+++ b/table.html
@@ -3,9 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>able repo</title>
+    <title>table repo</title>
+    <style>
+        table{
+            border-collapse: collapse;
+            border-radius: 15px;
+            width: 300px;
+            text-align: center;
+        }
+        tr{
+            border-top-right-radius: 10px;
+            border-top-left-radius: 10px;
+        }
+        th{
+            padding: 5px 30px;
+            background-color: rgb(7, 119, 73);
+            color: white;
+            font-size: 22px;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+          
+        }
+        td{
+            padding: 5px 30px;
+            font-size: 20px;
+        }
+        .secondrow{
+            color:rgb(7, 119, 73);
+        }
+
+
+        table {
+    width: 100%;
+    border-spacing: 0; 
+    border-collapse: separate;
+}
+table tr:first-child th:first-child,
+table tr:first-child td:first-child {
+    border-top-left-radius:10px
+}
+
+table tr:first-child th:last-child,
+table tr:first-child td:last-child {
+    border-top-right-radius:10px
+}
+
+
+
+    </style>
 </head>
 <body>
+    <table>
+        <thead>
+            <tr>
+              <th>Rank</th>
+              <th>Name</th>
+              <th>Points</th>
+              <th>Team</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Domentic</td>
+                <td>88,110</td>
+                <td>dcode</td>
+            </tr>
+            <tr class="secondrow">
+                <td>2</td>
+                <td>Sally</td>
+                <td>72,400</td>
+                <td>Students</td>
+            </tr>
+            <tr class="lastrow">
+                <td>3</td>
+                <td>Nick</td>
+                <td>52,300</td>
+                <td>dcode</td>
+            </tr>
+        </tbody>
+    </table>
     
 </body>
 </html>
